added My Skills sections, and button to go to projects page

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -62,7 +62,6 @@
       }
       .my-skills {
         padding-left: 10px;
-        margin-left: 10px;
       }
       footer {
         background-color: rgb(228, 217, 195);
@@ -74,6 +73,9 @@
         border: 0px;
         border-top: 5px;
         border-style: solid;
+      }
+      li {
+        font-size: 20px;
       }
     </style>
   </head>
@@ -105,8 +107,20 @@
       </p>
     </div>
 
-    <div class="My skills">
+    <div class="my-skills">
       <h2>My skills</h2>
+      <ul>
+        <li>C programming language</li>
+        <li>C++ programming Language</li>
+        <li>Java programming Language</li>
+        <li>Asp.net knowledge</li>
+        <li>Unity beginner</li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>My projects</h2>
+      <button><a href="projects.html">Check it Out</a></button>
     </div>
 
     <footer>
