added a preview to my project and a video and add styling

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -11,6 +11,14 @@
 
     <div>
       <h1>My projects</h1>
+      <h2>R8PC</h2>
+      <p class="project-description">
+        A group project for university, this preview is the only footage or
+        proof I have about it during the current times
+      </p>
+      <video width="680" controls>
+        <source src="../Resources/project-preview.mp4" type="video/mp4" />
+      </video>
     </div>
 
     <footer>
